--- a/kubernetes/persistent-volume.yaml
+++ b/kubernetes/persistent-volume.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: fileserver
+  name: "efs-pv"
 spec:
   capacity:
     storage: 30Gi
   accessModes:
   - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   nfs:
-    path: /boomi-fileshare
+    path: /boomifileshare
     server: ip-address
