--- a/kubernetes/helm/templates/secret.yaml
+++ b/kubernetes/helm/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: boomi-secret
 type: Opaque
 stringData:
-  username: {{ .Values.secrets.username }}
-  password: {{ .Values.secrets.password }}
-  account: {{ .Values.secrets.account }}
+  username: abc
+  password: abc
+  account: abc
