--- a/kubernetes/helm/templates/secret.yaml
+++ b/kubernetes/helm/templates/secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: boomi-secret
 type: Opaque
 stringData:
-  username: abc
-  password: abc
-  account: abc
+  username: {{ .Values.secrets.username }}
+  password: {{ .Values.secrets.password }}
+  account: {{ .Values.secrets.account }}
