added service folder

--- a/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
@@ -6,7 +6,7 @@ spec:
   capacity:	
     storage: 30Gi	
   accessModes:	
-  - ReadWriteMany	
+  - ReadWriteOnce	
   persistentVolumeReclaimPolicy: Retain	
   volumeMode: Filesystem	
   storageClassName: standard-rwo	
