--- a/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
@@ -4,7 +4,7 @@ metadata:
   name: efs-claim
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: standard-rwo
   resources:
     requests:
