--- a/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
@@ -2,6 +2,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: csi-filestore
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: filestore.csi.storage.gke.io
 parameters:
   # "CIDR range to allocate Filestore IP Ranges from"
