--- a/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
@@ -9,7 +9,7 @@ spec:
   - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   volumeMode: Filesystem
-  storageClassName: csi-filestore
+  storageClassName: gke-csi-filestore
   nfs:
     path: {{ .Values.volume.path }}
     server: {{ .Values.volume.server }}
