--- a/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: csi-filestore
+  name: gke-csi-filestore
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
 provisioner: filestore.csi.storage.gke.io
