--- a/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: csi-filestore
+  storageClassName: gke-csi-filestore
   resources:
     requests:
       storage: 50Gi
