--- a/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_storageclass.yaml
@@ -14,3 +14,6 @@ parameters:
   network: {{ .Values.storage.network }}
 allowVolumeExpansion: true
 reclaimPolicy: Retain
+spec:
+  attachRequired: false
+  podInfoOnMount: true
