--- a/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: "efs-pv"
+  name: "gke-pv"
   annotations:
     volume.beta.kubernetes.io/storage-class: "nfs-client"
+  labels:
+    name: "gke-pv"
 spec:
   capacity:
     storage: 30Gi
