--- a/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pvclaim.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: efs-claim
+  name: gke-claim
   annotations:
     volume.beta.kubernetes.io/storage-class: "nfs-client"
 spec:
+  selector:
+    matchLabels:
+      name: "gke-pv"
   accessModes:
     - ReadWriteMany
   storageClassName: nfs-client
