--- a/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_eks_pv.yaml
@@ -1,18 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: "gke-pv"
-  annotations:
-    volume.beta.kubernetes.io/storage-class: "nfs-client"
-  labels:
-    name: "gke-pv"
+  name: gke-pv
 spec:
   capacity:
-    storage: 30Gi
-  accessModes:
-  - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
+    storage: 100Gi
   volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
   storageClassName: nfs-client
   nfs:
     path: {{ .Values.volume.path }}
