--- a/kubernetes/helm/.helmignore
+++ b/kubernetes/helm/.helmignore
@@ -21,5 +21,5 @@
 *.tmproj
 .vscode/
 
-templates/boomi_molecule_eks_statefulset.yaml
-templates/boomi_molecule_eks_service.yaml
+# templates/boomi_molecule_eks_statefulset.yaml
+# templates/boomi_molecule_eks_service.yaml
