--- a/kubernetes/helm/templates/boomi_molecule_gke_statefulset.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_gke_statefulset.yaml
@@ -79,7 +79,7 @@ spec:
               - liveness
         env:
         - name: BOOMI_ATOMNAME
-          value: "boomi-molecule-eks"
+          value: "boomi-molecule-gke"
         - name: ATOM_LOCALHOSTID
           valueFrom:
             fieldRef:
@@ -100,6 +100,6 @@ spec:
               name: boomi-secret
               key: password
         - name: BOOMI_CONTAINERNAME
-          value: "boomi-molecule-eks"
+          value: "boomi-molecule-gke"
         - name: INSTALLATION_DIRECTORY
           value: "/mnt/boomi"
