--- a/kubernetes/helm/templates/boomi_molecule_gke_ingress.yaml
+++ b/kubernetes/helm/templates/boomi_molecule_gke_ingress.yaml
@@ -1,10 +1,11 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: boomi-molecule-ingress
+  name: molecule-ingress
   annotations:
     # If the class annotation is not specified it defaults to "gce".
     kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.global-static-ip-name: {{ .Values.ingress.staticIpName }}
 spec:
   rules:
   - http:
@@ -13,7 +14,4 @@ spec:
         backend:
           serviceName: molecule-service
           servicePort: 80
-      - path: /boomi-molecule
-        backend:
-          serviceName: molecule-service
-          servicePort: 80
+
