added ingress with static ip

--- a/NewVPCGKECluster.yaml
+++ b/NewVPCGKECluster.yaml
@@ -3,7 +3,7 @@ imports:
 
 resources:
 - name: boomi-gke-quickstart
-  type: config.jinja
+  type: NewVPC.jinja
   properties:
     region: us-central1
     #publicSubnetCIDR: 102.0.0.0/20
