--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 imports:
-- path: config.jinja
+- path: boomi_molecule.jinja
 
 resources:
 - name: boomi-gke-quickstart
-  type: config.jinja
+  type: boomi_molecule.jinja
   properties:
     region: us-central1
     zone: us-central1-a
