--- a/test_data/config_existing_vpc.yaml
+++ b/test_data/config_existing_vpc.yaml
@@ -1,8 +1,8 @@
 imports:
-- path: boomi_molecule.jinja
+- path: ../boomi_molecule_existing_vpc.jinja
 
 resources:
 - name: boomi-gke-quickstart
-  type: boomi_molecule.jinja
+  type: boomi_molecule_existing_vpc.jinja
   properties:
     zone: us-central1-a
