--- a/kubernetes/nfs-client-provisioner/Chart.yaml
+++ b/kubernetes/nfs-client-provisioner/Chart.yaml
@@ -6,7 +6,7 @@ home: https://github.com/kubernetes-incubator/external-storage/tree/master/nfs-c
 version: 1.2.11
 sources:
 - https://github.com/kubernetes-incubator/external-storage/tree/master/nfs-client
-deprecated: true
+deprecated: false
 keywords:
 - nfs
 - storage
