--- a/kubernetes/nfs-client-provisioner/templates/serviceaccount.yaml
+++ b/kubernetes/nfs-client-provisioner/templates/serviceaccount.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ template "nfs-client-provisioner.name" . }}
     chart: {{ template "nfs-client-provisioner.chart" . }}
-    heritage: {{ template "nfs-client-provisioner.chart" . }}
-    release: {{ template "nfs-client-provisioner.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
   name: {{ template "nfs-client-provisioner.serviceAccountName" . }}
 {{- end -}}
