--- a/kubernetes/nfs-client-provisioner_1/Chart.yaml
+++ b/kubernetes/nfs-client-provisioner_1/Chart.yaml
@@ -1,9 +1,6 @@
+---
 apiVersion: v1
-appVersion: 3.1.0
-description: DEPRECATED - nfs-client is an automatic provisioner that used your *already configured* NFS server, automatically creating Persistent Volumes.
-name: nfs-client-provisioner
-version: 1.2.11
-deprecated: false
-keywords:
-- nfs
-- storage
+appVersion: "1.0.0"
+description: A Helm chart for Boomi Molecule
+name: nfs-client
+version: 1.0.0
