--- a/kubernetes/nfs-client-provisioner_1/templates/serviceaccount.yaml
+++ b/kubernetes/nfs-client-provisioner_1/templates/serviceaccount.yaml
@@ -1,6 +1,11 @@
+{{ if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: nfs-client-provisioner
-  # replace with namespace where provisioner is deployed
-  namespace: default
+  labels:
+    app: {{ template "nfs-client-provisioner.name" . }}
+    chart: {{ template "nfs-client-provisioner.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+  name: {{ template "nfs-client-provisioner.serviceAccountName" . }}
+{{- end -}}
