--- a/test_data/config.yaml
+++ b/test_data/config.yaml
@@ -9,3 +9,5 @@ resources:
     boomiUserEmailID: boomiUserEmailID
     boomiPassword: boomiPassword
     boomiAccountID: boomiAccountID
+    subnetCidrOne: 192.168.0.0/21
+    subnetCidrTwo: 192.168.8.0/21
