--- a/test_data/config.yaml
+++ b/test_data/config.yaml
@@ -6,8 +6,9 @@ resources:
   type: boomi_molecule.jinja
   properties:
     zone: us-central1-a
+    subnetCidrOne: 192.168.0.0/21
+    subnetCidrTwo: 192.168.8.0/21
+    gkeClusterAuthorizedNetworkCidr: 192.168.253.0/28
     boomiUserEmailID: boomiUserEmailID
     boomiPassword: boomiPassword
     boomiAccountID: boomiAccountID
-    subnetCidrOne: 192.168.0.0/21
-    subnetCidrTwo: 192.168.8.0/21
