Updated boomi helm secrets

--- a/kubernetes/boomi-molecule/templates/boomi_molecule_gke_secret.yaml
+++ b/kubernetes/boomi-molecule/templates/boomi_molecule_gke_secret.yaml
@@ -4,6 +4,10 @@ metadata:
   name: boomi-secret
 type: Opaque
 stringData:
+  account: {{ .Values.secrets.account }}
+  {{ if eq "token" .Values.auth.type }}
+  token: {{ .Values.secrets.token }}
+  {{ else }}
   username: {{ .Values.secrets.username }}
   password: {{ .Values.secrets.password }}
-  account: {{ .Values.secrets.account }}
+  {{ end }}
