--- a/input_data/config_new_vpc.yaml
+++ b/input_data/config_new_vpc.yaml
@@ -9,6 +9,8 @@ resources:
     vmSubnetCidr: 192.168.0.0/21
     gkeSubnetCidr: 192.168.8.0/21
     gkeClusterAuthorizedNetworkCidr: 192.168.253.0/28
+    boomiAuthenticationType: token
+    boomiMFAInstallToken: molecule-test
     boomiUserEmailID: boomiUserEmailID
     boomiPassword: boomiPassword
     boomiAccountID: boomiAccountID
